--- a/Views/Cart/GetOrders.cshtml
+++ b/Views/Cart/GetOrders.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<Order>
+@model List<Order>
+@using Mailo.Data.Enums
 @{
     ViewData["Title"] = "Show Orders";
 }
@@ -40,18 +41,12 @@
                   
                     <td>@o.OrderStatus</td>
                     <td>@o.TotalPrice</td>
-                    @* <td>@o.Payment.PaymentStatus</td> *@
-                    <td>
-                        <form method="post" asp-action="CancelOrder" asp-controller="Cart">
+                            <td>
+                                <form method="post" asp-action="CancelOrder" asp-controller="Cart">
                                     <input asp-for="@o.ID" name="OrderId" asp-route-OrderId="@o.ID" hidden />
-                            <button type="submit" class="btn btn-outline-primary">Cancel</button>
-                        </form>
-                    </td>
-                    <td>
-                        <a asp-action="PaymentWithPayPal" asp-controller="Payment" class="btn btn-primary">
-                            Pay with PayPal
-                        </a>
-                    </td>
+                                    <button type="submit" class="btn btn-outline-primary" @(o.OrderStatus != OrderStatus.Pending ? "disabled" : "")>Cancel</button>
+                                </form>
+                            </td>
                 </tr>
 
             }}
